UCSFD8-956 fixed overlap bug

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -11146,7 +11146,12 @@ a.video_preview::before {
             -ms-flex-pack: center;
                 justify-content: center;
         -ms-flex-item-align: center;
-            align-self: center; }
+            align-self: center;
+        cursor: -webkit-grab;
+        cursor: grab; }
+        .publication-range .ui-slider-handle:active {
+          cursor: -webkit-grabbing;
+          cursor: grabbing; }
       .publication-range .ui-slider__handle-label {
         text-align: center;
         position: absolute;
